--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.20",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
