--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.20",
+    "@react-input/mask": "^1.2.5",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "inputmask": "^5.0.9",
     "react": "^18.3.1",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
